Added RealArray and changed DoubleVector to extend it

--- a/libraries/common/common.vcxproj
+++ b/libraries/common/common.vcxproj
@@ -79,7 +79,11 @@
     </Lib>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\RealArray.h" />
     <ClInclude Include="include\types.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="tcc\RealArray.tcc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
