--- a/libraries/dataset/dataset.vcxproj
+++ b/libraries/dataset/dataset.vcxproj
@@ -87,7 +87,7 @@
     <ClInclude Include="include\DenseDataVector.h" />
     <ClInclude Include="include\IDataVector.h" />
     <ClInclude Include="include\IntegerList.h" />
-    <ClInclude Include="include\Loader.h" />
+    <ClInclude Include="include\DatasetLoader.h" />
     <ClInclude Include="include\OnesDataVector.h" />
     <ClInclude Include="include\Parser.h" />
     <ClInclude Include="include\ParsingIterator.h" />
@@ -113,7 +113,7 @@
   <ItemGroup>
     <None Include="tcc\DataVectorBuilder.tcc" />
     <None Include="tcc\DenseDataVector.tcc" />
-    <None Include="tcc\Loader.tcc" />
+    <None Include="tcc\DatasetLoader.tcc" />
     <None Include="tcc\Parser.tcc" />
     <None Include="tcc\ParsingIterator.tcc" />
     <None Include="tcc\SparseBinaryDataVector.tcc" />
