--- a/libraries/dataset/dataset.vcxproj.filters
+++ b/libraries/dataset/dataset.vcxproj.filters
@@ -21,9 +21,6 @@
     <ClInclude Include="include\ParsingIterator.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\Loader.h">
-      <Filter>include</Filter>
-    </ClInclude>
     <ClInclude Include="include\SupervisedExampleBuilder.h">
       <Filter>include</Filter>
     </ClInclude>
@@ -58,6 +55,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\DenseDataVector.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DatasetLoader.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
@@ -97,9 +97,6 @@
     <None Include="tcc\ParsingIterator.tcc">
       <Filter>tcc</Filter>
     </None>
-    <None Include="tcc\Loader.tcc">
-      <Filter>tcc</Filter>
-    </None>
     <None Include="tcc\SupervisedExampleBuilder.tcc">
       <Filter>tcc</Filter>
     </None>
@@ -116,6 +113,9 @@
       <Filter>tcc</Filter>
     </None>
     <None Include="tcc\SparseDataVector.tcc">
+      <Filter>tcc</Filter>
+    </None>
+    <None Include="tcc\DatasetLoader.tcc">
       <Filter>tcc</Filter>
     </None>
   </ItemGroup>
