in the middle of some big changes - everything is broken

--- a/libraries/mappings/mappings.vcxproj
+++ b/libraries/mappings/mappings.vcxproj
@@ -81,7 +81,10 @@
   <ItemGroup>
     <ClInclude Include="include\Constant.h" />
     <ClInclude Include="include\Coordinatewise.h" />
+    <ClInclude Include="include\Coordinatewise2.h" />
     <ClInclude Include="include\DecisionTreePath.h" />
+    <ClInclude Include="include\IndexPair.h" />
+    <ClInclude Include="include\IndexPairList.h" />
     <ClInclude Include="include\Layer.h" />
     <ClInclude Include="include\Map.h" />
     <ClInclude Include="include\SerializableIndexValue.h" />
@@ -98,7 +101,10 @@
   <ItemGroup>
     <ClCompile Include="src\Constant.cpp" />
     <ClCompile Include="src\Coordinatewise.cpp" />
+    <ClCompile Include="src\Coordinatewise2.cpp" />
     <ClCompile Include="src\DecisionTreePath.cpp" />
+    <ClCompile Include="src\IndexPair.cpp" />
+    <ClCompile Include="src\IndexPairList.cpp" />
     <ClCompile Include="src\Layer.cpp" />
     <ClCompile Include="src\Map.cpp" />
     <ClCompile Include="src\SerializableIndexValue.cpp" />
