--- a/libraries/mappings/mappings.vcxproj.filters
+++ b/libraries/mappings/mappings.vcxproj.filters
@@ -44,12 +44,6 @@
     <ClInclude Include="include\Scale.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\Shift.h">
-      <Filter>include</Filter>
-    </ClInclude>
-    <ClInclude Include="include\Coordinatewise.h">
-      <Filter>include</Filter>
-    </ClInclude>
     <ClInclude Include="include\SerializableIndexValue.h">
       <Filter>include</Filter>
     </ClInclude>
@@ -66,6 +60,12 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\IndexPairList.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Zero.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Shift.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
@@ -97,12 +97,6 @@
     <ClCompile Include="src\Scale.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\Shift.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Coordinatewise.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="src\SerializableIndexValue.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -121,18 +115,15 @@
     <ClCompile Include="src\IndexPairList.cpp">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="include\Zero.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Shift.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="tcc\DecisionTreePath.tcc">
-      <Filter>tcc</Filter>
-    </None>
-    <None Include="tcc\Scale.tcc">
-      <Filter>tcc</Filter>
-    </None>
-    <None Include="tcc\Shift.tcc">
-      <Filter>tcc</Filter>
-    </None>
-    <None Include="tcc\Coordinatewise.tcc">
       <Filter>tcc</Filter>
     </None>
     <None Include="tcc\Map.tcc">
