--- a/libraries/mappings/mappings.vcxproj
+++ b/libraries/mappings/mappings.vcxproj
@@ -80,7 +80,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="include\Constant.h" />
-    <ClInclude Include="include\Coordinatewise2.h" />
+    <ClInclude Include="include\Coordinatewise.h" />
     <ClInclude Include="include\DecisionTreePath.h" />
     <ClInclude Include="include\IndexPair.h" />
     <ClInclude Include="include\IndexPairList.h" />
@@ -101,7 +101,7 @@
   <ItemGroup>
     <ClCompile Include="include\Zero.cpp" />
     <ClCompile Include="src\Constant.cpp" />
-    <ClCompile Include="src\Coordinatewise2.cpp" />
+    <ClCompile Include="src\Coordinatewise.cpp" />
     <ClCompile Include="src\DecisionTreePath.cpp" />
     <ClCompile Include="src\IndexPair.cpp" />
     <ClCompile Include="src\IndexPairList.cpp" />
