--- a/libraries/mappings/mappings.vcxproj.filters
+++ b/libraries/mappings/mappings.vcxproj.filters
@@ -53,9 +53,6 @@
     <ClInclude Include="include\Map.h">
       <Filter>include</Filter>
     </ClInclude>
-    <ClInclude Include="include\Coordinatewise2.h">
-      <Filter>include</Filter>
-    </ClInclude>
     <ClInclude Include="include\IndexPair.h">
       <Filter>include</Filter>
     </ClInclude>
@@ -66,6 +63,9 @@
       <Filter>include</Filter>
     </ClInclude>
     <ClInclude Include="include\Shift.h">
+      <Filter>include</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Coordinatewise.h">
       <Filter>include</Filter>
     </ClInclude>
   </ItemGroup>
@@ -106,9 +106,6 @@
     <ClCompile Include="src\Map.cpp">
       <Filter>src</Filter>
     </ClCompile>
-    <ClCompile Include="src\Coordinatewise2.cpp">
-      <Filter>src</Filter>
-    </ClCompile>
     <ClCompile Include="src\IndexPair.cpp">
       <Filter>src</Filter>
     </ClCompile>
@@ -119,6 +116,9 @@
       <Filter>src</Filter>
     </ClCompile>
     <ClCompile Include="src\Shift.cpp">
+      <Filter>src</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Coordinatewise.cpp">
       <Filter>src</Filter>
     </ClCompile>
   </ItemGroup>
