--- a/print/print.vcxproj
+++ b/print/print.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="14.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="debug|x64">
@@ -59,13 +59,13 @@
       </PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>
       </PrecompiledHeaderOutputFile>
-      <AdditionalIncludeDirectories>include;..\libraries\utilities\include;..\libraries\mappings\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\libraries\utilities\include;..\libraries\layers\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>..\libraries\utilities\lib\$(Configuration);..\libraries\mappings\lib\$(Configuration)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>utilities.lib;mappings.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\libraries\utilities\lib\$(Configuration);..\libraries\layers\lib\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>utilities.lib;layers.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='release|x64'">
@@ -80,15 +80,15 @@
       </PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>
       </PrecompiledHeaderOutputFile>
-      <AdditionalIncludeDirectories>include;..\libraries\utilities\include;..\libraries\mappings\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\libraries\utilities\include;..\libraries\layers\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\libraries\utilities\lib\$(Configuration);..\libraries\mappings\lib\$(Configuration)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>utilities.lib;mappings.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\libraries\utilities\lib\$(Configuration);..\libraries\layers\lib\$(Configuration)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>utilities.lib;layers.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -98,7 +98,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\print.h" />
-    <ClInclude Include="include\printable.h" />
+    <ClInclude Include="include\IPrintable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
