--- a/print/print.vcxproj
+++ b/print/print.vcxproj
@@ -59,7 +59,7 @@
       </PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>
       </PrecompiledHeaderOutputFile>
-      <AdditionalIncludeDirectories>include;..\libraries\utilities\include;..\libraries\layers\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\libraries\common\include;..\libraries\utilities\include;..\libraries\layers\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -80,7 +80,7 @@
       </PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>
       </PrecompiledHeaderOutputFile>
-      <AdditionalIncludeDirectories>include;..\libraries\utilities\include;..\libraries\layers\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;..\libraries\common\include;..\libraries\utilities\include;..\libraries\layers\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
