Renamed ElementLayout -> HorizontalLayout

--- a/print/print.vcxproj
+++ b/print/print.vcxproj
@@ -93,7 +93,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="include\svgHelpers.cpp" />
-    <ClCompile Include="src\ElementXLayout.cpp" />
+    <ClCompile Include="src\HorizontalLayout.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\PrintableInput.cpp" />
     <ClCompile Include="src\PrintableMap.cpp" />
@@ -103,7 +103,7 @@
   <ItemGroup>
     <ClInclude Include="include\CommandLineArgs.h" />
     <ClInclude Include="include\IPrintable.h" />
-    <ClInclude Include="include\ElementXLayout.h" />
+    <ClInclude Include="include\HorizontalLayout.h" />
     <ClInclude Include="include\PrintableInput.h" />
     <ClInclude Include="include\PrintableMap.h" />
     <ClInclude Include="include\PrintableCoordinatewise.h" />
