--- a/print/print.vcxproj
+++ b/print/print.vcxproj
@@ -95,6 +95,7 @@
     <ClCompile Include="include\svgHelpers.cpp" />
     <ClCompile Include="src\HorizontalLayout.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\PrintableEmpty.cpp" />
     <ClCompile Include="src\PrintableInput.cpp" />
     <ClCompile Include="src\PrintableMap.cpp" />
     <ClCompile Include="src\PrintableCoordinatewise.cpp" />
@@ -104,6 +105,7 @@
     <ClInclude Include="include\CommandLineArgs.h" />
     <ClInclude Include="include\IPrintable.h" />
     <ClInclude Include="include\HorizontalLayout.h" />
+    <ClInclude Include="include\PrintableEmpty.h" />
     <ClInclude Include="include\PrintableInput.h" />
     <ClInclude Include="include\PrintableMap.h" />
     <ClInclude Include="include\PrintableCoordinatewise.h" />
